--- a/Project_UI2/Project_UI/Web.config
+++ b/Project_UI2/Project_UI/Web.config
@@ -9,7 +9,9 @@
 		<httpRuntime targetFramework="4.7.2" />
 	</system.web>
 	<connectionStrings>
-		<add name="ProjectConnectionString" connectionString="Data Source=HANSIL-S-PC-DGJ\SQLEXPRESS;Initial Catalog=Project;Integrated Security=True"
+		<!--<add name="ProjectConnectionString" connectionString="Data Source=HANSIL-S-PC-DGJ\SQLEXPRESS;Initial Catalog=Project;Integrated Security=True"
+			  providerName="System.Data.SqlClient" />-->
+		<add name="ProjectConnectionString" connectionString="Data Source=TARUN\SQLEXPRESS;Initial Catalog=Project;Integrated Security=True"
 			  providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<system.net>
