--- a/Project_UI2/Project_UI/bin/Project_UI.dll.config
+++ b/Project_UI2/Project_UI/bin/Project_UI.dll.config
@@ -11,7 +11,9 @@
 	<connectionStrings>
 		<!--<add name="ProjectConnectionString" connectionString="Data Source=HANSIL-S-PC-DGJ\SQLEXPRESS;Initial Catalog=Project;Integrated Security=True"
 			  providerName="System.Data.SqlClient" />-->
-		<add name="ProjectConnectionString" connectionString="Data Source=TARUN\SQLEXPRESS;Initial Catalog=Project;Integrated Security=True"
+		<!--<add name="ProjectConnectionString" connectionString="Data Source=TARUN\SQLEXPRESS;Initial Catalog=Project;Integrated Security=True"
+			  providerName="System.Data.SqlClient" />-->
+		<add name="ProjectConnectionString" connectionString="Data Source=LAPTOP-IJ86VO59\SQLEXPRESS;Initial Catalog=Project;Integrated Security=True"
 			  providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<system.net>
