--- a/Project_UI2/Project_UI/Project_UI.csproj
+++ b/Project_UI2/Project_UI/Project_UI.csproj
@@ -112,6 +112,7 @@
     <Content Include="LoginCSS.css" />
     <Content Include="loginstyle.css" />
     <Content Include="Login_New.aspx" />
+    <Content Include="logout.aspx" />
     <Content Include="removefaculty.css" />
     <Content Include="Remove_Faculty.aspx" />
     <Content Include="Remove_Student.aspx" />
@@ -248,6 +249,13 @@
     </Compile>
     <Compile Include="Login_New.aspx.designer.cs">
       <DependentUpon>Login_New.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="logout.aspx.cs">
+      <DependentUpon>logout.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="logout.aspx.designer.cs">
+      <DependentUpon>logout.aspx</DependentUpon>
     </Compile>
     <Compile Include="Navigation.Master.cs">
       <DependentUpon>Navigation.Master</DependentUpon>
