--- a/Project_UI2/Project_UI/Web.config
+++ b/Project_UI2/Project_UI/Web.config
@@ -4,38 +4,54 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-	<system.web>
-		<compilation debug="true" targetFramework="4.7.2" />
-		<httpRuntime targetFramework="4.7.2" />
-	</system.web>
-	<connectionStrings>
-		<!--<add name="ProjectConnectionString" connectionString="Data Source=HANSIL-S-PC-DGJ\SQLEXPRESS;Initial Catalog=Project;Integrated Security=True"
+  <system.web>
+    <compilation debug="true" targetFramework="4.7.2" />
+    <httpRuntime targetFramework="4.7.2" />
+  </system.web>
+  <connectionStrings>
+    <!--<add name="ProjectConnectionString" connectionString="Data Source=HANSIL-S-PC-DGJ\SQLEXPRESS;Initial Catalog=Project;Integrated Security=True"
 			  providerName="System.Data.SqlClient" />-->
-		<!--<add name="ProjectConnectionString" connectionString="Data Source=TARUN\SQLEXPRESS;Initial Catalog=Project;Integrated Security=True"
+    <!--<add name="ProjectConnectionString" connectionString="Data Source=TARUN\SQLEXPRESS;Initial Catalog=Project;Integrated Security=True"
 			  providerName="System.Data.SqlClient" />-->
-		<add name="ProjectConnectionString" connectionString="Data Source=LAPTOP-IJ86VO59\SQLEXPRESS;Initial Catalog=Project;Integrated Security=True"
-			  providerName="System.Data.SqlClient" />
-	</connectionStrings>
-	<system.net>
-		<mailSettings>
-			<smtp deliveryMethod="Network">
-				<network host="smtp.gmail.com" port="587" userName="pranavbhimani04@gmail.com" password="mqrrkjkhgofblxkc" enableSsl="true"/>
-			</smtp>
-		</mailSettings>
-	</system.net>
-	<appSettings>
-		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
-		<add key="session"  value="Session['team_id']"></add>
-	</appSettings>
-	<system.webServer>
-		<handlers>
-			<add name="captcha1" verb="GET" path="CaptchaImage.axd" type="MSCaptcha.CaptchaImageHandler,MSCaptcha"/>
-		</handlers>
-	</system.webServer>
-	<system.codedom>
-		<compilers>
-			<compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
-			<compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
-		</compilers>
-	</system.codedom>
+    <add name="ProjectConnectionString" connectionString="Data Source=LAPTOP-IJ86VO59\SQLEXPRESS;Initial Catalog=Project;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="Network">
+        <network host="smtp.gmail.com" port="587" userName="pranavbhimani04@gmail.com" password="mqrrkjkhgofblxkc" enableSsl="true" />
+      </smtp>
+    </mailSettings>
+  </system.net>
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+    <add key="session" value="Session['team_id']">
+    </add>
+  </appSettings>
+  <system.webServer>
+    <handlers>
+      <add name="captcha1" verb="GET" path="CaptchaImage.axd" type="MSCaptcha.CaptchaImageHandler,MSCaptcha" />
+    </handlers>
+  </system.webServer>
+  <system.codedom>
+    <compilers>
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
+    </compilers>
+  </system.codedom>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
