--- a/Project_UI2/Project_UI/Web.config
+++ b/Project_UI2/Project_UI/Web.config
@@ -7,13 +7,17 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
-  </system.web>
+  <pages>
+      <controls>
+        <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit" />
+      </controls>
+    </pages></system.web>
   <connectionStrings>
     <!--<add name="ProjectConnectionString" connectionString="Data Source=HANSIL-S-PC-DGJ\SQLEXPRESS;Initial Catalog=Project;Integrated Security=True"
 			  providerName="System.Data.SqlClient" />-->
-    <!--<add name="ProjectConnectionString" connectionString="Data Source=TARUN\SQLEXPRESS;Initial Catalog=Project;Integrated Security=True"
-			  providerName="System.Data.SqlClient" />-->
-    <add name="ProjectConnectionString" connectionString="Data Source=LAPTOP-IJ86VO59\SQLEXPRESS;Initial Catalog=Project;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ProjectConnectionString" connectionString="Data Source=TARUN\SQLEXPRESS;Initial Catalog=Project;Integrated Security=True"
+			  providerName="System.Data.SqlClient" />
+    <!--<add name="ProjectConnectionString" connectionString="Data Source=LAPTOP-IJ86VO59\SQLEXPRESS;Initial Catalog=Project;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <system.net>
     <mailSettings>
